k8s/shadow/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-shadow-stable
  namespace: __NAMESPACE__
spec:
  selector:
    app: aceest-fitness
    strategy: shadow
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 5000
