k8s/shadow/ingress-mirror.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-shadow
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/mirror-target: "http://aceest-shadow-candidate.__NAMESPACE__.svc.cluster.local$request_uri"
    nginx.ingress.kubernetes.io/mirror-request-body: "on"
spec:
  ingressClassName: nginx
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-shadow-stable
                port:
                  number: 80
